# reflection-ag

./: .gitignore  Makefile  README.md
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/hooks/code-review/: pre-commit-with-agent.sh
backend/: .env.example  environment.yml  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: health.py
backend/app/core/: config.py  graph.py  prompts.py
backend/app/schemas/: health.py  schemas.py  state.py
backend/app/services/: health.py
backend/app/utils/: utils.py
backend/tests/: conftest.py  test_api.py
frontend/: .env.example  biome.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/components/: HealthStatus.tsx
frontend/src/hooks/: useHealth.ts
frontend/src/providers/: QueryProvider.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
openspec/changes/init-fullstack-project/: design.md  proposal.md  tasks.md
openspec/changes/init-fullstack-project/specs/backend-structure/: spec.md
openspec/changes/init-fullstack-project/specs/dev-workflow/: spec.md
openspec/changes/init-fullstack-project/specs/frontend-structure/: spec.md
